# rag-support-agent

./: .env.example  .gitignore  BUILD-PLAN.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
data/sample_docs/: PUT_DOCS_HERE.md  api-keys.md  authentication.md  billing.md  errors.md  webhooks.md
docker/init/: 01-extension.sql
docs/: README.md
evaluation/datasets/: support_qa.jsonl
src/rag_support_agent/: config.py
src/rag_support_agent/api/: serialize.py  server.py
src/rag_support_agent/api/ui/: index.html
src/rag_support_agent/eval/: cost.py  faithfulness.py  metrics.py  run.py
src/rag_support_agent/generation/: answer.py  ask.py  generators.py
src/rag_support_agent/ingestion/: chunker.py  loader.py  run.py
src/rag_support_agent/knowledge/: db.py  freshness.py  models.py
src/rag_support_agent/observability/: blindspot.py  gap_report.py  replay.py
src/rag_support_agent/retrieval/: embeddings.py  hybrid.py  search.py
tests/: test_api.py  test_blindspot.py  test_chunker.py  test_eval.py  test_freshness.py  test_fusion.py  test_generation.py
