[project]
name = "rag-support-agent"
version = "0.1.0"
description = "Production-grade RAG knowledge assistant with evaluation, confidence-based abstention, knowledge decay, and blind-spot detection."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Raphael Budin" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.5",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "rank-bm25>=0.2.2",
    "openai>=1.14",
    "anthropic>=0.25",
    "google-genai>=1.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.3", "pytest>=8.0", "mypy>=1.9"]

[project.scripts]
rag-ingest = "rag_support_agent.ingestion.run:main"
rag-ask = "rag_support_agent.generation.ask:main"
rag-eval = "rag_support_agent.eval.run:main"
rag-serve = "rag_support_agent.api.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_support_agent"]

[tool.ruff]
line-length = 100
